<?xml version="1.0" encoding="utf-8"?>
<!-- sample_menu.xml -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/menu_remove"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/menu_edit"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/ic_baseline_insert_chart_24"
        android:title="@string/menu_chart"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/menu_add"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_setting"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_baseline_done_24"
        android:title="@string/menu_done"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>

</menu>