<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_activity">

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.ngiu.ui.activity.ActivityFragment"
        android:label="@string/nav_bottom_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.ngiu.ui.account.AccountFragment"
        android:label="@string/nav_bottom_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_add_account"
        android:name="com.example.ngiu.ui.account.addaccounts.AddAccountFragment"
        android:label="@string/nav_bottom_account"
        tools:layout="@layout/add_account" >
        <action
            android:id="@+id/action_navigation_add_account_self"
            app:destination="@id/navigation_add_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.ngiu.ui.calendar.CalendarFragment"
        android:label="@string/nav_bottom_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.ngiu.ui.setting.SettingFragment"
        android:label="@string/nav_bottom_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.ngiu.ui.record.RecordFragment"
        tools:layout="@layout/fragment_record" />
</navigation>