<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_Keyboard"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/price_input_keys"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/keyboard_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >


            <TextView
                android:id="@+id/tv_price_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_1"
                android:tag="1"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_2"
                android:tag="2"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_3"
                android:tag="3"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_4"
                android:tag="4"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_5"
                android:tag="5"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_4"
                app:layout_constraintTop_toTopOf="@+id/tv_price_4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_6"
                android:tag="6"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_5"
                app:layout_constraintTop_toTopOf="@+id/tv_price_4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_7"
                android:tag="7"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price_4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_8"
                android:tag="8"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_7"
                app:layout_constraintTop_toTopOf="@id/tv_price_7"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_9"
                android:tag="9"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_8"
                app:layout_constraintTop_toTopOf="@id/tv_price_7"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_dot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                android:text="@string/keyboard_00"
                android:tag="00"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price_7"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:text="@string/keyboard_0"
                android:tag="0"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@id/tv_price_dot"
                app:layout_constraintTop_toTopOf="@id/tv_price_dot"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_price_calc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:gravity="center"
                android:background="@drawable/keyboard_border"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/tv_price_0"
                app:layout_constraintTop_toTopOf="@id/tv_price_0"
                tools:ignore="MissingConstraints"
                app:drawableStartCompat="@drawable/ic_baseline_calculate_24"
                app:drawableTint="@color/keyboard_font" />

            <TextView
                android:id="@+id/tv_price_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:singleLine="true"
                android:paddingEnd="40dp"
                android:background="@drawable/keyboard_border"
                android:textColor="@color/keyboard_font"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                tools:ignore="MissingConstraints,RtlSymmetry"
                app:drawableTint="@color/keyboard_font"
                app:drawableEndCompat="@drawable/ic_baseline_backspace_24" />

            <TextView
                android:id="@+id/tv_price_clear"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:singleLine="true"
                android:background="@drawable/keyboard_border"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                android:text="@string/keyboard_c"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="@+id/tv_price_back"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_back"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/tv_price_enter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/keyboard_enter"
                android:background="@drawable/keyboard_border"
                android:textColor="@color/keyboard_font"
                android:textSize="24sp"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="@+id/tv_price_clear"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_clear"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
