<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_list_background"
    tools:context="com.aerolite.ngiu.ui.activity.ActivityFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_activity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:menu="@menu/title_menu"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_title_background"
        app:layout_constraintTop_toBottomOf="@id/toolbar_activity">

        <TextView
            android:id="@+id/tvCurrentMonthExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:singleLine="true"
            android:text="@string/option_current_month_expense"
            android:textColor="@color/app_title_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tvCurrentMonthExpenseBalance"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCurrentMonthExpenseBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:singleLine="true"
            android:text="@string/amount_zero_with_dollar_sign"
            android:textColor="@color/app_title_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvCurrentMonthIncome"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCurrentMonthIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:singleLine="true"
            android:text="@string/option_current_month_income"
            android:textColor="@color/app_title_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCurrentMonthIncomeBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="15dp"
            android:singleLine="true"
            android:text="@string/amount_zero_with_dollar_sign"
            android:textColor="@color/app_title_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCurrentMonthIncome"/>

        <TextView
            android:id="@+id/tvBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:singleLine="true"
            android:text="@string/option_budget"
            android:textColor="@color/app_title_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvBudgetBalance" />

        <TextView
            android:id="@+id/tvBudgetBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:singleLine="true"
            android:text="@string/amount_zero_with_dollar_sign"
            android:textColor="@color/app_title_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/info_activity_layout" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddTransactionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        android:backgroundTintMode="add"
        android:backgroundTint="@color/app_title_background"
        android:clickable="true"
        android:foregroundTintMode="add"
        android:src="@drawable/ic_baseline_add_24"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:pressedTranslationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/app_title_text"
        android:contentDescription="@string/menu_add" />


</androidx.constraintlayout.widget.ConstraintLayout>